优化一些代码格式